# crates/tui/src/models.rs
@@ -6,7 +6,16 @@ pub(crate) struct FeedSummary {
   pub(crate) url:               String,
   pub(crate) domain:            String,
   pub(crate) category:          String,
-  pub(crate) base_poll_seconds: i64
+  pub(crate) base_poll_seconds: i64,
+  pub(crate) tags: Option<Vec<String>>
+}
+
+#[derive(Debug, Deserialize, Clone)]
+pub(crate) struct FeedEntryCounts {
+  pub(crate) feed_id:      String,
+  pub(crate) total_count:  i64,
+  pub(crate) unread_count: i64,
+  pub(crate) read_count:   i64
 }
 
 #[derive(Debug, Deserialize, Clone)]
